ML-Project/fun.output
Terminals unused in grammar

    TYPE


Rules useless in parser due to conflicts

   36 non_empty_exp_list: exp


State 49 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 tp: ID
    2   | '<' tp_list '>'
    3   | tp ARROW tp
    4   | tp REF
    5   | '(' tp ')'

    6 tp_list: %empty
    7        | tp
    8        | tp ',' tp_list

    9 exp: '(' exp ')'
   10    | ID '(' exp ')'
   11    | '-' exp
   12    | NOT exp
   13    | '!' exp
   14    | '#' NUM exp
   15    | exp '+' exp
   16    | exp '-' exp
   17    | exp '*' exp
   18    | exp '&' exp
   19    | exp OR exp
   20    | exp '=' exp
   21    | exp '<' exp
   22    | exp '>' exp
   23    | exp ASSIGN exp
   24    | exp ';' exp
   25    | '<' '>'
   26    | '<' non_empty_exp_list '>'
   27    | exp ':' tp
   28    | if_stmt
   29    | WHILE exp DO exp
   30    | LET ID '=' exp IN exp
   31    | REF exp
   32    | ID
   33    | NUM

   34 if_stmt: IF exp THEN exp
   35        | IF exp THEN exp ELSE exp

   36 non_empty_exp_list: exp
   37                   | exp ','
   38                   | exp ',' non_empty_exp_list

   39 fun: FUN ID '(' ID ':' tp ')' ':' tp '=' exp

   40 program: %empty
   41        | fun program


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 13
    '#' (35) 14
    '&' (38) 18
    '(' (40) 5 9 10 39
    ')' (41) 5 9 10 39
    '*' (42) 17
    '+' (43) 15
    ',' (44) 8 37 38
    '-' (45) 11 16
    ':' (58) 27 39
    ';' (59) 24
    '<' (60) 2 21 25 26
    '=' (61) 20 30 39
    '>' (62) 2 22 25 26
    error (256)
    NUM <num> (258) 14 33
    ID <id> (259) 1 10 30 32 39
    OR (260) 19
    ASSIGN (261) 23
    FUN (262) 39
    IN (263) 30
    LET (264) 30
    WHILE (265) 29
    DO (266) 29
    IF (267) 34 35
    THEN (268) 34 35
    ELSE (269) 35
    REF (270) 4 31
    ARROW (271) 3
    NOT (272) 12
    TYPE (273)
    IFX (274)
    UNARY_OP (275)
    FCALL (276)


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    tp (37)
        on left: 1 2 3 4 5
        on right: 3 4 5 7 8 27 39
    tp_list (38)
        on left: 6 7 8
        on right: 2 8
    exp (39)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 27 29 30 31 34 35 36 37 38 39
    if_stmt (40)
        on left: 34 35
        on right: 28
    non_empty_exp_list (41)
        on left: 36 37 38
        on right: 26 38
    fun (42)
        on left: 39
        on right: 41
    program (43)
        on left: 40 41
        on right: 0 41


State 0

    0 $accept: • program $end

    FUN  shift, and go to state 1

    $default  reduce using rule 40 (program)

    fun      go to state 2
    program  go to state 3


State 1

   39 fun: FUN • ID '(' ID ':' tp ')' ':' tp '=' exp

    ID  shift, and go to state 4


State 2

   41 program: fun • program

    FUN  shift, and go to state 1

    $default  reduce using rule 40 (program)

    fun      go to state 2
    program  go to state 5


State 3

    0 $accept: program • $end

    $end  shift, and go to state 6


State 4

   39 fun: FUN ID • '(' ID ':' tp ')' ':' tp '=' exp

    '('  shift, and go to state 7


State 5

   41 program: fun program •

    $default  reduce using rule 41 (program)


State 6

    0 $accept: program $end •

    $default  accept


State 7

   39 fun: FUN ID '(' • ID ':' tp ')' ':' tp '=' exp

    ID  shift, and go to state 8


State 8

   39 fun: FUN ID '(' ID • ':' tp ')' ':' tp '=' exp

    ':'  shift, and go to state 9


State 9

   39 fun: FUN ID '(' ID ':' • tp ')' ':' tp '=' exp

    ID   shift, and go to state 10
    '<'  shift, and go to state 11
    '('  shift, and go to state 12

    tp  go to state 13


State 10

    1 tp: ID •

    $default  reduce using rule 1 (tp)


State 11

    2 tp: '<' • tp_list '>'

    ID   shift, and go to state 10
    '<'  shift, and go to state 11
    '('  shift, and go to state 12

    $default  reduce using rule 6 (tp_list)

    tp       go to state 14
    tp_list  go to state 15


State 12

    5 tp: '(' • tp ')'

    ID   shift, and go to state 10
    '<'  shift, and go to state 11
    '('  shift, and go to state 12

    tp  go to state 16


State 13

    3 tp: tp • ARROW tp
    4   | tp • REF
   39 fun: FUN ID '(' ID ':' tp • ')' ':' tp '=' exp

    REF    shift, and go to state 17
    ARROW  shift, and go to state 18
    ')'    shift, and go to state 19


State 14

    3 tp: tp • ARROW tp
    4   | tp • REF
    7 tp_list: tp •
    8        | tp • ',' tp_list

    REF    shift, and go to state 17
    ARROW  shift, and go to state 18
    ','    shift, and go to state 20

    $default  reduce using rule 7 (tp_list)


State 15

    2 tp: '<' tp_list • '>'

    '>'  shift, and go to state 21


State 16

    3 tp: tp • ARROW tp
    4   | tp • REF
    5   | '(' tp • ')'

    REF    shift, and go to state 17
    ARROW  shift, and go to state 18
    ')'    shift, and go to state 22


State 17

    4 tp: tp REF •

    $default  reduce using rule 4 (tp)


State 18

    3 tp: tp ARROW • tp

    ID   shift, and go to state 10
    '<'  shift, and go to state 11
    '('  shift, and go to state 12

    tp  go to state 23


State 19

   39 fun: FUN ID '(' ID ':' tp ')' • ':' tp '=' exp

    ':'  shift, and go to state 24


State 20

    8 tp_list: tp ',' • tp_list

    ID   shift, and go to state 10
    '<'  shift, and go to state 11
    '('  shift, and go to state 12

    $default  reduce using rule 6 (tp_list)

    tp       go to state 14
    tp_list  go to state 25


State 21

    2 tp: '<' tp_list '>' •

    $default  reduce using rule 2 (tp)


State 22

    5 tp: '(' tp ')' •

    $default  reduce using rule 5 (tp)


State 23

    3 tp: tp • ARROW tp
    3   | tp ARROW tp •
    4   | tp • REF

    REF    shift, and go to state 17
    ARROW  shift, and go to state 18

    $default  reduce using rule 3 (tp)


State 24

   39 fun: FUN ID '(' ID ':' tp ')' ':' • tp '=' exp

    ID   shift, and go to state 10
    '<'  shift, and go to state 11
    '('  shift, and go to state 12

    tp  go to state 26


State 25

    8 tp_list: tp ',' tp_list •

    $default  reduce using rule 8 (tp_list)


State 26

    3 tp: tp • ARROW tp
    4   | tp • REF
   39 fun: FUN ID '(' ID ':' tp ')' ':' tp • '=' exp

    REF    shift, and go to state 17
    ARROW  shift, and go to state 18
    '='    shift, and go to state 27


State 27

   39 fun: FUN ID '(' ID ':' tp ')' ':' tp '=' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 40
    if_stmt  go to state 41


State 28

   33 exp: NUM •

    $default  reduce using rule 33 (exp)


State 29

   10 exp: ID • '(' exp ')'
   32    | ID •

    '('  shift, and go to state 42

    $default  reduce using rule 32 (exp)


State 30

   30 exp: LET • ID '=' exp IN exp

    ID  shift, and go to state 43


State 31

   29 exp: WHILE • exp DO exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 44
    if_stmt  go to state 41


State 32

   34 if_stmt: IF • exp THEN exp
   35        | IF • exp THEN exp ELSE exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 45
    if_stmt  go to state 41


State 33

   31 exp: REF • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 46
    if_stmt  go to state 41


State 34

   12 exp: NOT • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 47
    if_stmt  go to state 41


State 35

   25 exp: '<' • '>'
   26    | '<' • non_empty_exp_list '>'

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '>'    shift, and go to state 48
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp                 go to state 49
    if_stmt             go to state 41
    non_empty_exp_list  go to state 50


State 36

   11 exp: '-' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 51
    if_stmt  go to state 41


State 37

   14 exp: '#' • NUM exp

    NUM  shift, and go to state 52


State 38

   13 exp: '!' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 53
    if_stmt  go to state 41


State 39

    9 exp: '(' • exp ')'

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 54
    if_stmt  go to state 41


State 40

   15 exp: exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp
   39 fun: FUN ID '(' ID ':' tp ')' ':' tp '=' exp •

    OR      shift, and go to state 55
    ASSIGN  shift, and go to state 56
    ';'     shift, and go to state 57
    ':'     shift, and go to state 58
    '&'     shift, and go to state 59
    '='     shift, and go to state 60
    '<'     shift, and go to state 61
    '>'     shift, and go to state 62
    '+'     shift, and go to state 63
    '-'     shift, and go to state 64
    '*'     shift, and go to state 65

    $default  reduce using rule 39 (fun)


State 41

   28 exp: if_stmt •

    $default  reduce using rule 28 (exp)


State 42

   10 exp: ID '(' • exp ')'

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 66
    if_stmt  go to state 41


State 43

   30 exp: LET ID • '=' exp IN exp

    '='  shift, and go to state 67


State 44

   15 exp: exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp
   29    | WHILE exp • DO exp

    OR      shift, and go to state 55
    ASSIGN  shift, and go to state 56
    DO      shift, and go to state 68
    ';'     shift, and go to state 57
    ':'     shift, and go to state 58
    '&'     shift, and go to state 59
    '='     shift, and go to state 60
    '<'     shift, and go to state 61
    '>'     shift, and go to state 62
    '+'     shift, and go to state 63
    '-'     shift, and go to state 64
    '*'     shift, and go to state 65


State 45

   15 exp: exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp
   34 if_stmt: IF exp • THEN exp
   35        | IF exp • THEN exp ELSE exp

    OR      shift, and go to state 55
    ASSIGN  shift, and go to state 56
    THEN    shift, and go to state 69
    ';'     shift, and go to state 57
    ':'     shift, and go to state 58
    '&'     shift, and go to state 59
    '='     shift, and go to state 60
    '<'     shift, and go to state 61
    '>'     shift, and go to state 62
    '+'     shift, and go to state 63
    '-'     shift, and go to state 64
    '*'     shift, and go to state 65


State 46

   15 exp: exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp
   31    | REF exp •

    $default  reduce using rule 31 (exp)


State 47

   12 exp: NOT exp •
   15    | exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp

    $default  reduce using rule 12 (exp)


State 48

   25 exp: '<' '>' •

    $default  reduce using rule 25 (exp)


State 49

   15 exp: exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp
   36 non_empty_exp_list: exp •
   37                   | exp • ','
   38                   | exp • ',' non_empty_exp_list

    OR      shift, and go to state 55
    ASSIGN  shift, and go to state 56
    ';'     shift, and go to state 57
    ':'     shift, and go to state 58
    '&'     shift, and go to state 59
    '='     shift, and go to state 60
    '<'     shift, and go to state 61
    '>'     shift, and go to state 62
    '+'     shift, and go to state 63
    '-'     shift, and go to state 64
    '*'     shift, and go to state 65
    ','     shift, and go to state 70

    '>'  [reduce using rule 36 (non_empty_exp_list)]

    shift/reduce conflict on token '>':
       36 non_empty_exp_list: exp •
       22 exp: exp • '>' exp
      First example: FUN ID '(' ID ':' tp ')' ':' tp '<' exp • '>' exp '>' exp program $end
      Shift derivation
        $accept
        ↳ program                                                                      $end
          ↳ fun                                                                program
            ↳ FUN ID '(' ID ':' tp ')' ':' tp exp                          exp
                                              ↳ '<' non_empty_exp_list '>'
                                                    ↳ exp
                                                      ↳ exp • '>' exp
      Second example: FUN ID '(' ID ':' tp ')' ':' tp '=' '<' exp • '>' program $end
      Reduce derivation
        $accept
        ↳ program                                                                      $end
          ↳ fun                                                                program
            ↳ FUN ID '(' ID ':' tp ')' ':' tp '=' exp
                                                  ↳ '<' non_empty_exp_list '>'
                                                        ↳ exp •



State 50

   26 exp: '<' non_empty_exp_list • '>'

    '>'  shift, and go to state 71


State 51

   11 exp: '-' exp •
   15    | exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp

    $default  reduce using rule 11 (exp)


State 52

   14 exp: '#' NUM • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 72
    if_stmt  go to state 41


State 53

   13 exp: '!' exp •
   15    | exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp

    $default  reduce using rule 13 (exp)


State 54

    9 exp: '(' exp • ')'
   15    | exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp

    OR      shift, and go to state 55
    ASSIGN  shift, and go to state 56
    ';'     shift, and go to state 57
    ':'     shift, and go to state 58
    '&'     shift, and go to state 59
    '='     shift, and go to state 60
    '<'     shift, and go to state 61
    '>'     shift, and go to state 62
    '+'     shift, and go to state 63
    '-'     shift, and go to state 64
    '*'     shift, and go to state 65
    ')'     shift, and go to state 73


State 55

   19 exp: exp OR • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 74
    if_stmt  go to state 41


State 56

   23 exp: exp ASSIGN • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 75
    if_stmt  go to state 41


State 57

   24 exp: exp ';' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 76
    if_stmt  go to state 41


State 58

   27 exp: exp ':' • tp

    ID   shift, and go to state 10
    '<'  shift, and go to state 11
    '('  shift, and go to state 12

    tp  go to state 77


State 59

   18 exp: exp '&' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 78
    if_stmt  go to state 41


State 60

   20 exp: exp '=' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 79
    if_stmt  go to state 41


State 61

   21 exp: exp '<' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 80
    if_stmt  go to state 41


State 62

   22 exp: exp '>' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 81
    if_stmt  go to state 41


State 63

   15 exp: exp '+' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 82
    if_stmt  go to state 41


State 64

   16 exp: exp '-' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 83
    if_stmt  go to state 41


State 65

   17 exp: exp '*' • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 84
    if_stmt  go to state 41


State 66

   10 exp: ID '(' exp • ')'
   15    | exp • '+' exp
   16    | exp • '-' exp
   17    | exp • '*' exp
   18    | exp • '&' exp
   19    | exp • OR exp
   20    | exp • '=' exp
   21    | exp • '<' exp
   22    | exp • '>' exp
   23    | exp • ASSIGN exp
   24    | exp • ';' exp
   27    | exp • ':' tp

    OR      shift, and go to state 55
    ASSIGN  shift, and go to state 56
    ';'     shift, and go to state 57
    ':'     shift, and go to state 58
    '&'     shift, and go to state 59
    '='     shift, and go to state 60
    '<'     shift, and go to state 61
    '>'     shift, and go to state 62
    '+'     shift, and go to state 63
    '-'     shift, and go to state 64
    '*'     shift, and go to state 65
    ')'     shift, and go to state 85


State 67

   30 exp: LET ID '=' • exp IN exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 86
    if_stmt  go to state 41


State 68

   29 exp: WHILE exp DO • exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 87
    if_stmt  go to state 41


State 69

   34 if_stmt: IF exp THEN • exp
   35        | IF exp THEN • exp ELSE exp

    NUM    shift, and go to state 28
    ID     shift, and go to state 29
    LET    shift, and go to state 30
    WHILE  shift, and go to state 31
    IF     shift, and go to state 32
    REF    shift, and go to state 33
    NOT    shift, and go to state 34
    '<'    shift, and go to state 35
    '-'    shift, and go to state 36
    '#'    shift, and go to state 37
    '!'    shift, and go to state 38
    '('    shift, and go to state 39

    exp      go to state 88
    if_stmt  go to state 41

